# gorp-rs

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  DOCKER.md  Dockerfile  ENCRYPTION-SUCCESS-REPORT.md  GET-STARTED.md  Makefile  README.md  TESTING.md  automated_encryption_test.sh  build.rs  claude-settings.clean.tgz  cleanup-account.sh  code-review.md  config.toml.example  docker-compose.multi.yml  docker-compose.yml  docker-entrypoint.sh  docker-tools.txt  output.txt  run_encryption_tests.sh  scenarios.jsonl  test-config.toml  test_encryption.md  verify_room_encryption.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
claude-jail/: README.md  pyproject.toml
claude-jail/src/claude_jail/: __init__.py  mcp_loader.py  protocol.py  server.py  session.py
claude-jail/tests/: __init__.py  test_mcp_loader.py  test_protocol.py
docs/: ACP-MIGRATION-STATUS.md  CHANGELOG.md  DOCKER.md  ENCRYPTION-SUCCESS-REPORT.md  HELP.md  MESSAGE-DISPLAY-BUG.md  MOTD.md  SESSION-RESUME-LIMITATION.md  USER-STORY.md  WORKSTATION-STATUS.md  index.html  testing.md
docs/audits/: AUDIT_REPORT_2026-02-11.md  AUDIT_REPORT_2026-02-16.md  AUDIT_REPORT_2026-02-17.md
docs/plans/: 2025-01-01-gorp-core-library-extraction.md  2025-01-22-remote-reset-design.md  2025-12-02-matrix-claude-bridge-design.md  2025-12-02-matrix-claude-bridge-implementation.md  2025-12-03-github-actions-cicd-design.md  2025-12-03-github-actions-cicd-implementation.md  2025-12-11-admin-panel-design.md  2025-12-11-admin-phase1-implementation.md  2025-12-11-admin-phase1.5-matrix-auth.md  2025-12-16-acp-implementation.md  2025-12-16-acp-migration-design.md  2025-12-17-warm-session-manager-design.md  2025-12-17-warm-session-manager.md  2025-12-17-workstation-phase2-implementation.md  2025-12-17-workstation-webapp-design.md  2025-12-17-workstation-webapp-implementation.md  2025-12-18-claude-jail-design.md  2025-12-20-gorp-agent-implementation.md  2025-12-20-pluggable-agent-backend-design.md  2025-12-24-gorp-core-design.md  2025-12-24-gorp-core-implementation.md  2026-01-01-dispatch-control-plane-design.md  2026-01-01-dispatch-implementation.md  2026-01-01-gorp-ffi-design.md  (+14 more)
example/: config.toml.example
gorp/: Cargo.toml  Cargo.toml.bak
gorp-agent/: Cargo.toml  agent.toml
gorp-agent/scenarios/basic/: simple_prompt.json  streaming_text.json  usage_tracking.json
gorp-agent/scenarios/errors/: backend_error.json  recoverable_error.json  timeout_error.json
gorp-agent/scenarios/mcp/discovery/: list_mcp_resources.json  list_mcp_tools.json
gorp-agent/scenarios/mcp/failures/: mcp_server_unavailable.json  mcp_tool_error.json
gorp-agent/scenarios/mcp/resources/: read_mcp_resource.json
gorp-agent/scenarios/mcp/tools/: invoke_mcp_tool.json
gorp-agent/scenarios/sessions/: create_session.json  resume_session.json
gorp-agent/scenarios/tools/chained/: multi_tool_workflow.json  read_then_edit.json  search_then_read.json
gorp-agent/scenarios/tools/failures/: bash_failure.json  permission_denied.json  read_nonexistent.json
gorp-agent/scenarios/tools/internal/: bash_command.json  glob_search.json  grep_search.json  read_file.json  write_file.json
gorp-agent/src/: config.rs  event.rs  handle.rs  lib.rs  registry.rs  traits.rs
gorp-agent/src/backends/: acp.rs  direct_cli.rs  direct_codex.rs  mock.rs  mod.rs  mux.rs  mux_tools.rs
gorp-agent/src/testing/: mock_builder.rs  mod.rs  recording.rs  scenarios.rs
gorp-agent/tests/: acp_backend_tests.rs  direct_cli_tests.rs  event_tests.rs  handle_tests.rs  integration_external_tests.rs  mock_backend_tests.rs  mock_builder_tests.rs  recording_tests.rs  registry_tests.rs  scenario_advanced_tests.rs  scenario_backend_tests.rs  scenario_tests.rs  traits_tests.rs  websearch_cnn_test.rs
gorp-core/: Cargo.toml
gorp-core/src/: commands.rs  config.rs  dispatch_events.rs  lib.rs  metrics.rs  orchestrator.rs  scheduler.rs  session.rs  traits.rs  utils.rs  warm_session.rs
gorp-core/tests/: orchestrator_tests.rs  scheduler_tests.rs
gorp-ffi/: Cargo.toml  build.rs  uniffi.toml
gorp-ffi/bindings/swift/: GorpFFI.swift  GorpFFIFFI.h  GorpFFIFFI.modulemap
gorp-ffi/src/: agent.rs  error.rs  events.rs  gorp_ffi.udl  lib.rs  runtime.rs  scheduler.rs  session.rs
gorp-ffi/tests/: integration_test.rs
gorp/src/: browser.rs  claude.rs  lib.rs  main.rs  message_handler.rs  paths.rs  session.rs  terminal.rs  utils.rs  webhook.rs
gorp/src/admin/: auth.rs  mod.rs  routes.rs
gorp/templates/: base.html
gorp/templates/admin/: config.html  schedules.html  search.html
gorp/templates/admin/browse/: markdown.html
gorp/templates/admin/channels/: logs.html  matrix.html
gorp/templates/partials/: toast.html
packaging/: README.md
proto/: coven.proto
scripts/: check-tool-updates.sh  fix-mcp-ports.sh  gorp-multi.sh  hotpatch-tools.sh  install-tools.sh  rolling-restart.sh  setup-instance.sh  setup-multi.sh  tools.yaml  upgrade-instances.sh
src/: acp_client.rs  bus.rs  claude.rs  claude_jail.rs  config.rs  dispatch_handler.rs  dispatch_system_prompt.rs  dispatch_tools.rs  lib.rs  main.rs  matrix_client.rs  matrix_interface.rs  mcp.rs  message_handler.rs  metrics.rs  onboarding.rs  orchestrator.rs  paths.rs  scheduler.rs  server.rs  session.rs  task_executor.rs  utils.rs  warm_session.rs  webhook.rs
static/: chat.js  feed.js  gateways.js  ws.js
templates/: base.html  login.html
tests/: admin_routes_tests.rs  bus_tests.rs  claude_tests.rs  config_tests.rs  dedup_integration_tests.rs  dispatch_integration.rs  gateway_matrix_tests.rs  gateway_slack_tests.rs  gateway_telegram_tests.rs  gateway_tests.rs  gateway_web_tests.rs  message_handler_tests.rs  onboarding_tests.rs  orchestrator_dispatch_tests.rs  orchestrator_integration_tests.rs  orchestrator_run_loop_tests.rs  platform_integration_tests.rs  session_tests.rs
workstation/: Cargo.toml
workstation/src/: auth.rs  config.rs  files.rs  gorp_client.rs  lib.rs  main.rs  oidc.rs  routes.rs  templates.rs
workstation/templates/: base.html  browser.html  file_edit.html  files.html  index.html  terminal.html
(+126 files in other folders)
