[workspace]
resolver = "2"
members = [
    "gorp",
    "workstation",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
askama = "0.14"
tower-sessions = { version = "0.14", features = ["memory-store"] }
portable-pty = "0.8"
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }
base64 = "0.22"
