[package]
name = "gorp"
version = "0.2.9"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
matrix-sdk = { version = "0.16", features = ["e2e-encryption", "sqlite"] }
rusqlite = { version = "0.37", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4"] }
futures-util = "0.3"
chrono = "0.4"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
directories = "6.0.0"
tracing-appender = "0.2.4"
pulldown-cmark = "0.13"
two_timer = "2.2"
cron = "0.15"
regex = "1.12.2"
chrono-tz = "0.10.4"
clap = { version = "4.5.53", features = ["derive"] }
askama = "0.15"
tower-sessions = { version = "0.14", features = ["memory-store"] }
mime_guess = "2.0"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
agent-client-protocol = "0.9"
tokio-util = { version = "0.7", features = ["compat"] }
async-trait = "0.1"

# Internal crates
gorp-agent = { path = "gorp-agent", features = ["acp"] }

[dev-dependencies]
serial_test = "3.0"
tempfile = "3.10"
