[workspace]
members = [".", "gorp-agent", "gorp-core"]

[package]
name = "gorp"
version = "0.3.2"
edition = "2021"

[features]
default = ["gui", "admin"]
gui = ["dep:iced", "dep:tray-icon", "dep:global-hotkey"]
admin = ["dep:askama", "dep:tower-sessions"]

[dependencies]
tokio = { version = "1", features = ["full"] }
matrix-sdk = { version = "0.16", features = ["e2e-encryption", "sqlite"] }
rusqlite = { version = "0.37", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4"] }
futures-util = "0.3"
chrono = "0.4"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
directories = "6.0.0"
tracing-appender = "0.2.4"
pulldown-cmark = "0.13"
two_timer = "2.2"
cron = "0.15"
regex = "1.12.2"
chrono-tz = "0.10.4"
clap = { version = "4.5.53", features = ["derive"] }
askama = { version = "0.14", optional = true }
tower-sessions = { version = "0.14", features = ["memory-store"], optional = true }
mime_guess = "2.0"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
agent-client-protocol = "0.9"
tokio-util = { version = "0.7", features = ["compat"] }
async-trait = "0.1"

# Internal crates
gorp-agent = { path = "gorp-agent", features = ["acp", "mux"] }
gorp-core = { path = "gorp-core" }

# For DISPATCH tools
mux = { git = "https://github.com/2389-research/mux-rs", branch = "main" }

# GUI (desktop app)
iced = { version = "0.13", features = ["tokio", "svg", "image"], optional = true }
tray-icon = { version = "0.19", optional = true }
global-hotkey = { version = "0.6", optional = true }
tokio-stream = "0.1.18"

[dev-dependencies]
serial_test = "3.0"
tempfile = "3.10"
