# ABOUTME: Python project configuration for Claude Jail
# ABOUTME: WebSocket service wrapping Claude Agent SDK for gorp-rs

[project]
name = "claude-jail"
version = "0.1.0"
description = "WebSocket service wrapping Claude Agent SDK for gorp-rs Matrix bridge"
readme = "README.md"
authors = [
    { name = "Harper Reed", email = "harper@nata2.org" }
]
requires-python = ">=3.12"
dependencies = [
    "websockets>=12.0",
    "pydantic>=2.0",
    "claude-code-sdk",
]

[project.scripts]
claude-jail = "claude_jail.server:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
