[package]
name = "gorp-core"
version = "0.1.0"
edition = "2021"
description = "Platform-agnostic chat orchestration for AI agents"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["sync", "rt", "time", "fs"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
anyhow = "1"
rusqlite = { version = "0.37", features = ["bundled"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
cron = "0.15"
regex = "1"
chrono-tz = "0.10"
metrics = "0.24"
pulldown-cmark = "0.13"

# Internal
gorp-agent = { path = "../gorp-agent", features = ["acp"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
