[package]
name = "gorp-ffi"
version = "0.1.0"
edition = "2021"
description = "UniFFI bindings for gorp-agent and gorp-core"
license = "MIT"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "gorp_ffi"

[dependencies]
gorp-agent = { path = "../gorp-agent", features = ["acp", "mux"] }
gorp-core = { path = "../gorp-core" }
uniffi = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
once_cell = "1.19"
serde_json = "1"
anyhow = "1"
thiserror = "1"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[features]
default = ["mux", "acp"]
mux = ["gorp-agent/mux"]
acp = ["gorp-agent/acp"]

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
