[package]
name = "gorp"
version = "0.2.1"
edition.workspace = true

[dependencies]
tokio = { workspace = true }
matrix-sdk = { version = "0.16", features = ["e2e-encryption", "sqlite"] }
rusqlite = { version = "0.37", features = ["bundled"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = "0.15"
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
anyhow = { workspace = true }
uuid = { version = "1.6", features = ["v4"] }
futures-util = "0.3"
chrono = "0.4"
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
directories = "6.0.0"
tracing-appender = "0.2.4"
pulldown-cmark = "0.10"
two_timer = "2.2"
cron = "0.15"
regex = "1.12.2"
chrono-tz = "0.10.4"
clap = { version = "4.5.53", features = ["derive"] }
askama = { workspace = true }
tower-sessions = { workspace = true }
mime_guess = "2.0"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
