[package]
name = "workstation"
version = "0.1.0"
edition.workspace = true

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
askama = { workspace = true }
tower-sessions = { workspace = true }
dotenvy = "0.15"
oauth2 = "4.4"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
rusqlite = { workspace = true }
tower-sessions-rusqlite-store = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
